first website release

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-template": "^3.0.0",
     "gulp-webserver": "^0.9.1"
   }
 }
