--- a/new/package.json
+++ b/new/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-webserver": "^0.9.1"
   }
 }
