--- a/new/package.json
+++ b/new/package.json
@@ -2,6 +2,7 @@
   "name": "koara.github.io",
   "version": "1.0.0",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
     "gulp": "^3.9.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-rename": "^1.2.2",
