--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run compile && npm run browser-sync"
   },
   "dependencies": {
+    "browsersync": "0.0.1-security",
     "handlebars": "^4.0.6",
     "koara": "^0.13.0",
     "koara-html": "^0.13.0"
